# try-coagent

./: .gitignore  README.md  docker-compose.yml
config/clickhouse/initdb.d/: 02-test-results.sql
config/postgres/initdb.d/: 00-init-databases.sql  01-init-coagent-cloud.sql
examples/: README.md  logging-api-tutorial.hurl
examples/adk/: .env.example  Dockerfile  Justfile  README.md  pyproject.toml  requirements.txt
examples/adk/agent/: __init__.py  __main__.py  agent.py  coa_plugin.py  config.py  json.py  prompt.py
examples/adk/agent/sub_agents/data_analyst/: agent.py
examples/adk/agent/sub_agents/execution_analyst/: agent.py
examples/adk/agent/sub_agents/risk_analyst/: agent.py  prompt.py
examples/adk/agent/sub_agents/trading_analyst/: agent.py  prompt.py
examples/adk/src/: __init__.py  __main__.py  agent.py  coa_plugin.py  config.py
examples/adk/src/sub_agents/data_analyst/: agent.py
examples/adk/src/sub_agents/execution_analyst/: agent.py
examples/adk/src/sub_agents/risk_analyst/: agent.py
examples/crew_ai/: README.md  pyproject.toml  report.md
examples/crew_ai/src/crew_ai/: crew.py
examples/smolagents/: .env.example  Dockerfile  Justfile  README.md  pyproject.toml  requirements.txt
examples/smolagents/data/: flight_dataset.csv
examples/smolagents/src/: Gradio_UI.py  app.py  counters.py
examples/smolagents/src/services/flight_search/: flight_search.py  test_flight_service.py
examples/smolagents/src/tools/: flight_search.py
